@@ -1,4 +1,4 @@
-.\"	$NetBSD: fortune.6,v 1.10 2003/08/07 09:37:13 agc Exp $
+.\"	$NetBSD: fortune.6,v 1.11 2004/09/09 22:01:08 wiz Exp $
 .\"
 .\" Copyright (c) 1985, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -32,7 +32,7 @@
 .\"
 .\"	@(#)fortune.6	8.3 (Berkeley) 4/19/94
 .\"
-.Dd April 19, 1994
+.Dd September 9, 2004
 .Dt FORTUNE 6
 .Os
 .Sh NAME
@@ -66,9 +66,13 @@ on multiple files).
 .It Fl f
 Print out the list of files which would be searched, but don't
 print a fortune.
+.It Fl i
+Ignore case for
+.Fl m
+patterns.
 .It Fl l
 Long dictums only.
-.It Fl m
+.It Fl m Ar pattern
 Print out all fortunes which match the regular expression
 .Ar pattern .
 See
@@ -96,10 +100,6 @@ Needs be.
 .Ed
 .It Fl s
 Short apothegms only.
-.It Fl i
-Ignore case for
-.Fl m
-patterns.
 .It Fl w
 Wait before termination for an amount of time calculated from the
 number of characters in the message.
@@ -110,13 +110,14 @@ to guarantee that the message can be read before the screen is cleared.
 The user may specify alternative sayings.
 You can specify a specific file, a directory which contains one or
 more files, or the special word
-.Em all
+.Em all ,
 which says to use all the standard databases.
 Any of these may be preceded by a percentage, which is a number
 .Ar N
 between 0 and 100 inclusive, followed by a
-.Ar % .
-If it is, there will be a
+.Sq %
+character.
+If it is, there will be an
 .Ar N
 percent probability that an adage will be picked from that file
 or directory.
@@ -133,7 +134,7 @@ with
 .Em funny
 twice as big, saying
 .Bd -literal -offset indent
-fortune funny not-funny
+$ fortune funny not-funny
 .Ed
 .Pp
 will get you fortunes out of
@@ -141,27 +142,41 @@ will get you fortunes out of
 two-thirds of the time.
 The command
 .Bd -literal -offset indent
-fortune 90% funny 10% not-funny
+$ fortune 90% funny 10% not-funny
 .Ed
 .Pp
 will pick out 90% of its fortunes from
 .Em funny
-(the ``10% not-funny'' is unnecessary, since 10% is all that's left).
+(the
+.Dq 10%
+is unnecessary, since 10% is all that's left).
 The
 .Fl e
 option says to consider all files equal; thus
 .Bd -literal -offset indent
-fortune -e
+$ fortune -e
 .Ed
 .Pp
 is equivalent to
 .Bd -literal -offset indent
-fortune 50% funny 50% not
-.Em -funny
+$ fortune 50% funny 50% not-funny
 .Ed
+.Pp
+Datafiles for
+.Nm
+are created by the
+.Xr strfile 8
+utility, which is not installed by default,
+The source code for this utility
+can on BSD systems be found in
+.Pa /usr/src/games/fortune/strfile ,
+if it exists.
 .Sh FILES
-.Bl -tag -width Pa -compact
-.It Pa @fortune_dir@
+.Bl -tag -width XX@fortune_dir@/*XX -compact
+.It Pa @fortune_dir@/*
+Fortune files.
 .El
 .Sh SEE ALSO
-.Xr regex 3
+.Xr regex 3 ,
+.Xr random 6 ,
+.Xr rot13 6
