@@ -1,8 +1,8 @@
-.\"	$NetBSD: strfile.8,v 1.11 2003/08/07 09:37:14 agc Exp $
+.\"	$NetBSD: strfile.8,v 1.12 2004/09/09 22:03:21 wiz Exp $
 .\"
 .\" Copyright (c) 1989, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
-.\" 
+.\"
 .\" This code is derived from software contributed to Berkeley by
 .\" Ken Arnold.
 .\"
@@ -97,7 +97,7 @@ field to be set.
 .El
 .Pp
 The format of the header is:
-.Bd -literal
+.Bd -literal -offset indent
 #define	VERSION	1
 unsigned long	str_version;	/* version number */
 unsigned long	str_numstr;	/* # of strings in the file */
@@ -128,14 +128,14 @@ when
 is run and then using
 .Nm unstr
 to dump them out in the table order.
-.Sh SEE ALSO
-.Xr byteorder 3 ,
-.Xr fortune 6
 .Sh FILES
 .Bl -tag -width strfile.out -compact
 .It Pa strfile.out
 default output file.
 .El
+.Sh SEE ALSO
+.Xr byteorder 3 ,
+.Xr fortune 6
 .Sh HISTORY
 The
 .Nm strfile
